--- a/paper_plots_and_calcs.ipynb
+++ b/paper_plots_and_calcs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "id": "3c35b612",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "id": "ae6e905a",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "id": "7f899d23",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "4                          1  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "id": "677329b3",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "123                          3  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "id": "943fcd18",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "id": "7cce0cda",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "145                          2  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "id": "2d740273",
    "metadata": {},
    "outputs": [],
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "id": "6fe79034",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
        "4                          1  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "id": "d83fafa8",
    "metadata": {},
    "outputs": [],
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 11,
    "id": "0f23aa20",
    "metadata": {},
    "outputs": [
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "id": "466ecb3d",
    "metadata": {},
    "outputs": [],
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "id": "e338a6af",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "id": "ea5e4c07",
    "metadata": {},
    "outputs": [
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "id": "183852d3",
    "metadata": {},
    "outputs": [
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "id": "575f0605",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "id": "8311c248",
    "metadata": {},
    "outputs": [
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "id": "42019903",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "id": "33d33f5c",
    "metadata": {},
    "outputs": [],
@@ -1126,22 +1126,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "id": "ce398449",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'A1-A2': 2.324255859313614e-05,\n",
-       " 'A1-LLM': 0.22225986838504352,\n",
-       " 'A1-LLM Mini': 0.6876680511729218,\n",
-       " 'A2-LLM': 0.0006506588611719899,\n",
-       " 'A2-LLM Mini': 4.3705992443476964e-05,\n",
-       " 'LLM-LLM Mini': 0.37350697514392417}"
+       "{'A1-A2': np.float64(2.324255859313614e-05),\n",
+       " 'A1-LLM': np.float64(0.22225986838504352),\n",
+       " 'A1-LLM Mini': np.float64(0.6876680511729218),\n",
+       " 'A2-LLM': np.float64(0.0006506588611719899),\n",
+       " 'A2-LLM Mini': np.float64(4.3705992443476964e-05),\n",
+       " 'LLM-LLM Mini': np.float64(0.37350697514392417)}"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 22,
    "id": "ba799549",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1162,7 @@
      "text": [
       "comparisons: ['A1-A2', 'A1-LLM', 'A1-LLM Mini', 'A2-LLM', 'A2-LLM Mini', 'LLM-LLM Mini']\n",
       "Significant difference?: ['YES', 'NO', 'NO', 'YES', 'YES', 'NO']\n",
-      "Original P-values: [2.324255859313614e-05, 0.22225986838504352, 0.6876680511729218, 0.0006506588611719899, 4.3705992443476964e-05, 0.37350697514392417]\n",
+      "Original P-values: [np.float64(2.324255859313614e-05), np.float64(0.22225986838504352), np.float64(0.6876680511729218), np.float64(0.0006506588611719899), np.float64(4.3705992443476964e-05), np.float64(0.37350697514392417)]\n",
       "Holm-adjusted P-values: [1.39455352e-04 6.66779605e-01 7.47013950e-01 2.60263544e-03\n",
       " 2.18529962e-04 7.47013950e-01]\n",
       "Rejection decisions (Holm): [ True False False  True  True False]\n"
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 23,
    "id": "71b828f9",
    "metadata": {},
    "outputs": [],
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 24,
    "id": "37d6c4f9",
    "metadata": {},
    "outputs": [
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 25,
    "id": "185cae33",
    "metadata": {},
    "outputs": [
@@ -1440,7 +1440,7 @@
        "2                          1  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 27,
    "id": "f4b39121",
    "metadata": {},
    "outputs": [
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 28,
    "id": "884b8c3c",
    "metadata": {},
    "outputs": [],
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 29,
    "id": "3d54da79",
    "metadata": {},
    "outputs": [],
@@ -1689,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 30,
    "id": "df23ce84",
    "metadata": {},
    "outputs": [
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 31,
    "id": "7f8cbe4e",
    "metadata": {},
    "outputs": [
@@ -1812,7 +1812,7 @@
        "4  annotator1                        2                          0"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 32,
    "id": "251ec9bc",
    "metadata": {},
    "outputs": [
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 33,
    "id": "0cc3b69c",
    "metadata": {},
    "outputs": [
@@ -2019,7 +2019,7 @@
        "2                          1  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2030,7 +2030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 34,
    "id": "4cdafd43",
    "metadata": {},
    "outputs": [],
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 35,
    "id": "1d10a901",
    "metadata": {},
    "outputs": [
@@ -2136,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 36,
    "id": "7b10635c",
    "metadata": {},
    "outputs": [
@@ -2148,7 +2148,7 @@
       "Reject the null hypothesis: There IS a significant difference between group variance of residuals.\n",
       "comparisons: ['A1-A2', 'A1-LLM', 'A2-LLM']\n",
       "Significant difference?: ['NO', 'NO', 'NO']\n",
-      "Original P-values: [0.023065912650479536, 0.17029900698245753, 0.07698660597796975]\n",
+      "Original P-values: [np.float64(0.023065912650479536), np.float64(0.17029900698245753), np.float64(0.07698660597796975)]\n",
       "Holm-adjusted P-values: [0.06919774 0.17029901 0.15397321]\n",
       "Rejection decisions (Holm): [False False False]\n",
       "\n",
@@ -2156,7 +2156,7 @@
       "Reject the null hypothesis: There IS a significant difference between group variance of residuals.\n",
       "comparisons: ['A1-A2', 'A1-LLM', 'A2-LLM']\n",
       "Significant difference?: ['YES', 'NO', 'NO']\n",
-      "Original P-values: [0.007494107904658284, 0.09561926360884883, 0.048055659160128876]\n",
+      "Original P-values: [np.float64(0.007494107904658284), np.float64(0.09561926360884883), np.float64(0.048055659160128876)]\n",
       "Holm-adjusted P-values: [0.02248232 0.09611132 0.09611132]\n",
       "Rejection decisions (Holm): [ True False False]\n",
       "\n",
