--- a/create_example_hists_jcdl2025.ipynb
+++ b/create_example_hists_jcdl2025.ipynb
@@ -1380,7 +1380,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "JCDL2025",
+   "display_name": "FullProcess",
    "language": "python",
    "name": "python3"
   },
@@ -1394,7 +1394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
