update with better

--- a/chatgpt/chatgpt_withapi.ipynb
+++ b/chatgpt/chatgpt_withapi.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "86d2d69b",
    "metadata": {},
    "outputs": [],
@@ -123,9 +123,11 @@
     "            question = question.lstrip() # no whitespace\n",
     "            question = question[0].lower() + question[1:]\n",
     "            if verbose: print('   on question:',question)\n",
-    "            # Prepare the API request\n",
-    "            prompt = f\"I am going to show you an image. Here is the image: [Image: {encoded_image}]. Now, {question}\"\n",
-    "            prompt_save = f\"I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, {question}\"\n",
+    "            # # Prepare the API request\n",
+    "            # prompt = f\"I am going to show you an image. Here is the image: [Image: {encoded_image}]. Now, {question}\"\n",
+    "            # prompt_save = f\"I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, {question}\"\n",
+    "            prompt = f\"I am going to show you an image. Now, {question}\"\n",
+    "            prompt_save = f\"I am going to show you an image. Now, {question}\"\n",
     "\n",
     "            if subset_questions_by_keys is not None and type(subset_questions_by_keys) == type([]): # make sure list\n",
     "                for s in subset_questions_by_keys:\n",
@@ -367,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "7eb0608b",
    "metadata": {},
    "outputs": [
@@ -491,7 +493,8 @@
     "    for question_list in qa:\n",
     "        response, prompt = send_to_chatgpt(question_list, client, img_path, encoded_image,\n",
     "                    model = model, img_format = img_format_media, temperature=temperature,\n",
-    "                    test_run = test_run, subset_questions_by_keys=subset_questions_by_keys)\n",
+    "                    test_run = test_run, subset_questions_by_keys=subset_questions_by_keys, \n",
+    "                    fac=fac)\n",
     "        responses.append(response)\n",
     "        question_list['prompt'] = prompt\n",
     "\n",
