--- a/chatgpt/chatgpt_withapi_fewshot.ipynb
+++ b/chatgpt/chatgpt_withapi_fewshot.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "cddbfe28",
    "metadata": {},
    "outputs": [],
@@ -111,8 +111,10 @@
     "    question = question[0].lower() + question[1:]\n",
     "    if verbose: print('   on question:',question)\n",
     "    # Prepare the API request\n",
-    "    prompt = f\"I am going to show you an image. Here is the image: [Image: {encoded_image}]. Now, {question}\"\n",
-    "    prompt_save = f\"I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, {question}\"\n",
+    "    #prompt = f\"I am going to show you an image. Here is the image: [Image: {encoded_image}]. Now, {question}\"\n",
+    "    #prompt_save = f\"I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, {question}\"\n",
+    "    prompt = f\"I am going to show you an image. Now, {question}\"\n",
+    "    prompt_save = f\"I am going to show you an image. Now, {question}\"\n",
     "    return prompt, prompt_save, question"
    ]
   },
