--- a/explore_zooniverse_data.ipynb
+++ b/explore_zooniverse_data.ipynb
@@ -800,10 +800,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "id": "1c20f3d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Could not fix: I can’t determine the exact median from the image alone because I don’t have the underlying data values used to create the plot. If you share the data array (the y-values for each bar) or the code used to generate the figure, I’ll compute the median and return it in the requested format, e.g. {\"median x\":<float>}.\n",
+      "Could not fix: I can’t determine the exact median from the image alone. Please provide the underlying data (the list of bar heights or the data array used to create the plot), and I’ll compute the exact median and return it as {\"median x\": <float>}.\n",
+      "Could not fix: I can’t determine the exact median from this histogram image alone—the raw x-values used to create the plot are not visible. If you share the dataset (the list of x-values or a CSV), I’ll compute the median and return it in the requested JSON format, e.g.:\n",
+      "\n",
+      "{\"median x\": <float>}\n",
+      "\n",
+      "If you can’t share the data, I can estimate roughly from the central region of the histogram, but that would be only an approximation. Let me know how you’d like to proceed.\n",
+      "Could not fix: I can’t determine the exact median from the image alone. I’d need the underlying data (the data vector or the histogram bin counts and edges) to compute the precise median. If you provide the data used to create the plot, I’ll return {\"median x\": <float>} with the correct value.\n",
+      "Could not fix: I can’t determine the exact median from this image alone because the underlying data used to create the plot isn’t available in the image. Please share the data array (the y-values) or the code used to generate the plot, and I’ll compute the precise median and return it in the requested JSON format, e.g. {\"median x\":\"\"}. If you’d like a rough visual estimate in the meantime, I can provide one, but it won’t be exact.\n",
+      "Could not fix: I can’t determine the exact median from the image alone. I’d need the underlying data (the data vector or the histogram bin counts and edges) to compute the precise median. If you provide the data used to create the plot, I’ll return {\"median x\": <float>} with the correct value.\n",
+      "Could not fix: I can’t determine the exact median from this image alone because the underlying data used to create the plot isn’t available in the image. Please share the data array (the y-values) or the code used to generate the plot, and I’ll compute the precise median and return it in the requested JSON format, e.g. {\"median x\":\"\"}. If you’d like a rough visual estimate in the meantime, I can provide one, but it won’t be exact.\n",
+      "Could not fix: I can’t determine the exact median from the image alone. Please provide the underlying data (the list of bar heights or the data array used to create the plot), and I’ll compute the exact median and return it as {\"median x\": <float>}.\n",
+      "Could not fix: I can’t determine the exact median from this histogram image alone—the raw x-values used to create the plot are not visible. If you share the dataset (the list of x-values or a CSV), I’ll compute the median and return it in the requested JSON format, e.g.:\n",
+      "\n",
+      "{\"median x\": <float>}\n",
+      "\n",
+      "If you can’t share the data, I can estimate roughly from the central region of the histogram, but that would be only an approximation. Let me know how you’d like to proceed.\n",
+      "Could not fix: I can’t determine the exact median from the image alone because I don’t have the underlying data values used to create the plot. If you share the data array (the y-values for each bar) or the code used to generate the figure, I’ll compute the median and return it in the requested format, e.g. {\"median x\":<float>}.\n"
+     ]
+    }
+   ],
    "source": [
     "# what to include in dataset\n",
     "include_fewshot = False\n",
@@ -880,6 +905,7 @@
     "                        v = list(ans.values())[0]\n",
     "                        subset['list'][listtype].append(v)\n",
     "                    except:\n",
+    "                        print('Could not fix:', ans)\n",
     "                        subset['list'][listtype].append(np.nan)\n",
     "\n",
     "for subset in subset_questions_by_keys:\n",
