--- a/explore_zooniverse_data.ipynb
+++ b/explore_zooniverse_data.ipynb
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "1c20f3d3",
    "metadata": {},
    "outputs": [
@@ -874,7 +874,7 @@
     "    }\n",
     "    ]\n",
     "#import sys; sys.exit()\n",
-    "#['median', 'ngaussian'] # JPN: this is not efficient\n",
+    "#['median', 'ngaussian'] # XYZ: this is not efficient\n",
     "# fill with LLM outputs\n",
     "for i in range(len(df2)):\n",
     "    #### W/O FEW SHOT #####\n",
