--- a/zooniverse/parse_zooniverse_human_data.ipynb
+++ b/zooniverse/parse_zooniverse_human_data.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "eac5ca54",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
     "\n",
     "    anns = json.loads(d['annotations'])\n",
     "    for ann in anns:\n",
-    "        if 'how many gauss' in ann['task_label'].lower(): # JPN -- this is inefficient, make sure you come back and change!\n",
+    "        if 'how many gauss' in ann['task_label'].lower(): # XYZ -- this is inefficient, make sure you come back and change!\n",
     "            ann_nGaussians.append(int(ann['value']))\n",
     "        elif ('median' in ann['task_label'].lower()) and ('as a number' in ann['task_label'].lower()):\n",
     "            ann_medNum.append(float(ann['value']))\n",
