--- a/create_example_hists_jcdl2025.ipynb
+++ b/create_example_hists_jcdl2025.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "9f0dc2a5",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
     }
    ],
    "source": [
-    "# JPN -- IS THIS USED NOW??\n",
+    "# XYZ -- IS THIS USED NOW??\n",
     "# get popular words for titles/axis\n",
     "popular_nouns = get_popular_nouns(fullproc_r + 'data/')\n",
     "\n",
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "id": "b21dbf12",
    "metadata": {},
    "outputs": [
@@ -1144,7 +1144,7 @@
     "                            'xlabel fontsize':xlabel_fontsize,\n",
     "                            'ylabel fontsize':ylabel_fontsize, \n",
     "                        'plot indexes':plot_inds}\n",
-    "        for iplot,ax in enumerate(axes): ### JPN, colorbar\n",
+    "        for iplot,ax in enumerate(axes): ### XYZ, colorbar\n",
     "            # datas['plot' + str(iplot)] = collect_plot_data_axes(ax, \n",
     "            #                height, width,\n",
     "            #                data_from_plots[iplot], data_for_plots[iplot], \n",
@@ -1380,7 +1380,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "FullProcess",
+   "display_name": "JCDL2025",
    "language": "python",
    "name": "python3"
   },
@@ -1394,7 +1394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
