--- a/chatgpt/parse_chat_gpt_pickles.ipynb
+++ b/chatgpt/parse_chat_gpt_pickles.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f55fd9f4-0a1d-4ff6-ab72-acc38ddb46e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_api = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/' #store API results for example-hists\n",
+    "dir_api = '~/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/' #store API results for example-hists\n",
     "\n",
     "# where to save jsons\n",
-    "dir_api_jsons = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_jsons/' # example hists"
+    "dir_api_jsons = '~/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_jsons/' # example hists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2b70e783-3610-43d9-924c-9f196d61a861",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "172ad4cf-0749-44df-95a4-4fdf30d8272a",
    "metadata": {},
    "outputs": [],
@@ -39,25 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6a4308a1-6eea-426a-831b-b100916fda50",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(['/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_5_trial3.pickle',\n",
-       "  '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_3_trial9.pickle'],\n",
-       " 2)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "files[:5], len(files)"
+    "#files[:5], len(files)"
    ]
   },
   {
@@ -99,17 +86,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "87ec42a2-68f6-417e-b957-9c824f7a41a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#known_files = ['/Users/jnaiman/Dropbox/JCDL2024/paper_submission/chatgpt_api_jsons/Picture169.json']\n",
-    "#known_qs = ['What are the data values in this figure? You are a helpful assistant, please format the output as a json as {\"x\":[], \"y\":[], \"colors\":[]} where the values of \"x\", \"y\", and \"colors\" are the data values used to create the plot and are in the format of a list of floats.  ']\n"
-   ]
   },
   {
    "cell_type": "code",
@@ -7948,12 +7924,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": null,
    "id": "a9112139-6bfa-4109-8e19-cf0c77f53adb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_qa.to_json('/Users/jnaiman/Dropbox/JCDL2024/paper_submission/df_final.json', index=False)"
+    "df_qa.to_json('~/Dropbox/JCDL2024/paper_submission/df_final.json', index=False)"
    ]
   },
   {
