--- a/chatgpt/update_vqa_prompts.ipynb
+++ b/chatgpt/update_vqa_prompts.ipynb
@@ -10,24 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "4aa90ac5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_jsons = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/' #store API results for example-hists"
+    "dir_jsons = '~/LLM_VQA_JCDL2025/example_hists/jsons/' #store API results for example-hists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "21562c80",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "from glob import glob\n",
-    "#import pickle\n",
+    "import pickle\n",
     "from sys import path\n",
     "path.append('../')\n",
     "from utils.data_utils import NumpyEncoder\n",
@@ -36,26 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "ce33935a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/id_0077.json',\n",
-       " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/id_0020.json',\n",
-       " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/id_0036.json']"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "jsons = glob(dir_jsons + '*.json')\n",
-    "jsons[:3]"
+    "#jsons[:3]"
    ]
   },
   {
@@ -257,26 +244,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b63d5c03",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0039.pickle',\n",
-       " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0044.pickle',\n",
-       " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0027.pickle']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pickles = glob(dir_api + '*.pickle')\n",
-    "pickles[:3]"
+    "#pickles = glob(dir_api + '*.pickle')\n",
+    "#pickles[:3]"
    ]
   },
   {
