--- a/create_example_hists_jcdl2025.ipynb
+++ b/create_example_hists_jcdl2025.ipynb
@@ -13,8 +13,8 @@
     "# where to save the figures that are created\n",
     "#fake_figs_dir = './example_hists/' # saving in github only for small numbers\n",
     "# stop overwriting what is there\n",
-    "fake_figs_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/example_hists/'\n",
-    "#fake_figs_dir = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/fewshot/' # for fewshot learning\n",
+    "fake_figs_dir = '~/Downloads/tmp/JCDL2025/example_hists/'\n",
+    "#fake_figs_dir = '~/LLM_VQA_JCDL2025/example_hists/fewshot/' # for fewshot learning\n",
     "\n",
     "\n",
     "# format for saving images?\n",
