--- a/create_other_dataset_table.ipynb
+++ b/create_other_dataset_table.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": null,
    "id": "baa977d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "table_file = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets.xlsx'\n",
+    "table_file = '~/Downloads/tmp/JCDL2025/other_datasets.xlsx'\n",
     "\n",
-    "ref_path = '/Users/jnaiman/Downloads/tmp/JCDL2025/references.bib' # downloaded from JCDL overleaf"
+    "ref_path = '~/Downloads/tmp/JCDL2025/references.bib' # downloaded from JCDL overleaf"
    ]
   },
   {
