--- a/other_datasets/chartcheck_test.ipynb
+++ b/other_datasets/chartcheck_test.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_dat = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/ChartFC/chartfc_dataset_wikicommons/data/dataset/'"
+    "dir_dat = '~/Downloads/tmp/JCDL2025/other_datasets/ChartFC/chartfc_dataset_wikicommons/data/dataset/'"
    ]
   },
   {
