--- a/other_datasets/chartfc_test.ipynb
+++ b/other_datasets/chartfc_test.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/ChartFC/ChartFC_chartBERT/data/ChartFC/dataset_files/'"
+    "data_dir = '~/Downloads/tmp/JCDL2025/other_datasets/ChartFC/ChartFC_chartBERT/data/ChartFC/dataset_files/'"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir_tf = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/ChartFC/Table-Fact-Checking/'"
+    "data_dir_tf = '~/Downloads/tmp/JCDL2025/other_datasets/ChartFC/Table-Fact-Checking/'"
    ]
   },
   {
