--- a/other_datasets/chartqapro_test.ipynb
+++ b/other_datasets/chartqapro_test.ipynb
@@ -1524,12 +1524,12 @@
    "outputs": [],
    "source": [
     "files = [\n",
-    "         '/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/test/test_augmented.json',\n",
-    "         '/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/test/test_human.json',\n",
-    "         '/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/val/val_augmented.json',\n",
-    "         '/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/val/val_human.json',\n",
-    "        '/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/train/train_augmented.json',\n",
-    "         '/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/train/train_human.json'\n",
+    "         '~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/test/test_augmented.json',\n",
+    "         '~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/test/test_human.json',\n",
+    "         '~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/val/val_augmented.json',\n",
+    "         '~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/val/val_human.json',\n",
+    "        '~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/train/train_augmented.json',\n",
+    "         '~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/train/train_human.json'\n",
     "         ]\n",
     "\n",
     "for i,file in enumerate(files):\n",
@@ -5490,9 +5490,9 @@
     {
      "data": {
       "text/plain": [
-       "['/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/test/tables/multi_col_100264.csv',\n",
-       " '/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/test/tables/two_col_61154.csv',\n",
-       " '/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/test/tables/multi_col_40786.csv']"
+       "['~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/test/tables/multi_col_100264.csv',\n",
+       " '~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/test/tables/two_col_61154.csv',\n",
+       " '~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/test/tables/multi_col_40786.csv']"
       ]
      },
      "execution_count": 23,
@@ -5501,7 +5501,7 @@
     }
    ],
    "source": [
-    "tables = glob('/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/*/tables/*')\n",
+    "tables = glob('~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/*/tables/*')\n",
     "tables[:3]"
    ]
   },
@@ -5678,7 +5678,7 @@
    "source": [
     "i = 500\n",
     "dft = pd.read_csv(numerical_data[i])\n",
-    "print(numerical_data[i].split('/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/')[-1])\n",
+    "print(numerical_data[i].split('~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/')[-1])\n",
     "dft.head()"
    ]
   },
@@ -5769,7 +5769,7 @@
     "# 4 is one -- two_col_61236.csv\n",
     "# two_col_1738.csv\n",
     "dft = pd.read_csv(not_dates[i])\n",
-    "print(not_dates[i].split('/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/')[-1])\n",
+    "print(not_dates[i].split('~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/')[-1])\n",
     "dft.head()"
    ]
   },
@@ -5783,17 +5783,17 @@
     "for i in range(len(not_dates)):\n",
     "    f = not_dates[i]\n",
     "\n",
-    "    s = f.split('/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/')[-1].split('/')[0]\n",
+    "    s = f.split('~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/')[-1].split('/')[0]\n",
     "    ss = f.split('/')[-1].removesuffix('.csv')\n",
     "\n",
-    "    png = '/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/' + s + '/png/' + ss + '.png'\n",
+    "    png = '~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/' + s + '/png/' + ss + '.png'\n",
     "    if not os.path.exists(png):\n",
     "        print('NO FILE')\n",
     "        print(png)\n",
     "        import sys; sys.exit()\n",
     "    else:\n",
     "        #print(png)\n",
-    "        copyfile(png, '/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/parsed_numerical_png/' + ss + '.png')\n"
+    "        copyfile(png, '~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/parsed_numerical_png/' + ss + '.png')\n"
    ]
   },
   {
@@ -5805,7 +5805,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/jnaiman/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/train/png/11415.png'"
+       "'~/Dropbox/Paper_JCDL2025/other_datasets/ChartQA/ChartQA Dataset/train/png/11415.png'"
       ]
      },
      "execution_count": 90,
