--- a/other_datasets/docvqa_suite_test.ipynb
+++ b/other_datasets/docvqa_suite_test.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_suite_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/DocVQA_suite/'"
+    "data_suite_dir = '~/Downloads/tmp/JCDL2025/other_datasets/DocVQA_suite/'"
    ]
   },
   {
