--- a/other_datasets/figureqa_test.ipynb
+++ b/other_datasets/figureqa_test.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/FigureQA/'"
+    "base_dir = '~/Downloads/tmp/JCDL2025/other_datasets/FigureQA/'"
    ]
   },
   {
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "['/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/FigureQA/train1/qa_pairs.json']"
+       "['~/Downloads/tmp/JCDL2025/other_datasets/FigureQA/train1/qa_pairs.json']"
       ]
      },
      "execution_count": 12,
@@ -249,7 +249,7 @@
     {
      "data": {
       "text/plain": [
-       "['/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/FigureQA/train1/annotations.json']"
+       "['~/Downloads/tmp/JCDL2025/other_datasets/FigureQA/train1/annotations.json']"
       ]
      },
      "execution_count": 18,
@@ -771,12 +771,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/FigureQA/train1/annotations_format.txt\n"
+      "~/Downloads/tmp/JCDL2025/other_datasets/FigureQA/train1/annotations_format.txt\n"
      ]
     }
    ],
    "source": [
-    "!ls /Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/FigureQA/train1/annotations_format.txt"
+    "!ls ~/Downloads/tmp/JCDL2025/other_datasets/FigureQA/train1/annotations_format.txt"
    ]
   },
   {
