--- a/other_datasets/realcqa_test.ipynb
+++ b/other_datasets/realcqa_test.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "# just use git clone for jsons\n",
-    "data_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/'"
+    "data_dir = '~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/'"
    ]
   },
   {
@@ -336,9 +336,9 @@
     {
      "data": {
       "text/plain": [
-       "['/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC4508853___fgene-06-00245-g005.json',\n",
-       " '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC1866440___1471-2156-4-S1-S102-2.json',\n",
-       " '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC4049506___1471-2458-14-497-1.json']"
+       "['~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC4508853___fgene-06-00245-g005.json',\n",
+       " '~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC1866440___1471-2156-4-S1-S102-2.json',\n",
+       " '~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC4049506___1471-2458-14-497-1.json']"
       ]
      },
      "execution_count": 24,
@@ -509,16 +509,16 @@
     {
      "data": {
       "text/plain": [
-       "array(['/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC4687126___12889_2015_2651_Fig1_HTML.json',\n",
-       "       '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons2/PMC5459003___materials-10-00559-g005.json',\n",
-       "       '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC1326229___1471-2350-6-43-3.json',\n",
-       "       '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons2/PMC5664695___ijerph-14-01194-g003.json',\n",
-       "       '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC4454970___ijerph-12-05329-g001.json',\n",
-       "       '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC3160377___1471-2458-11-572-1.json',\n",
-       "       '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC2583910___pgen.1000281.g001.json',\n",
-       "       '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC4847021___ijerph-13-00359-g001.json',\n",
-       "       '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC3118131___1471-2156-12-48-2.json',\n",
-       "       '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons2/PMC5580617___ijerph-14-00914-g002.json'],\n",
+       "array(['~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC4687126___12889_2015_2651_Fig1_HTML.json',\n",
+       "       '~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons2/PMC5459003___materials-10-00559-g005.json',\n",
+       "       '~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC1326229___1471-2350-6-43-3.json',\n",
+       "       '~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons2/PMC5664695___ijerph-14-01194-g003.json',\n",
+       "       '~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC4454970___ijerph-12-05329-g001.json',\n",
+       "       '~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC3160377___1471-2458-11-572-1.json',\n",
+       "       '~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC2583910___pgen.1000281.g001.json',\n",
+       "       '~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC4847021___ijerph-13-00359-g001.json',\n",
+       "       '~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons/PMC3118131___1471-2156-12-48-2.json',\n",
+       "       '~/Downloads/tmp/JCDL2025/other_datasets/RealCQA/jsons2/PMC5580617___ijerph-14-00914-g002.json'],\n",
        "      dtype='<U136')"
       ]
      },
