--- a/other_datasets/structchart_test.ipynb
+++ b/other_datasets/structchart_test.ipynb
@@ -500,7 +500,7 @@
    "id": "de62bd3e",
    "metadata": {},
    "source": [
-    "So looking at the CSV files in `/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/StructChart/ChartX/histogram/csv` the issue is that the data is already binned -- i.e., there is no underlying data to pull from."
+    "So looking at the CSV files in `~/Downloads/tmp/JCDL2025/other_datasets/StructChart/ChartX/histogram/csv` the issue is that the data is already binned -- i.e., there is no underlying data to pull from."
    ]
   },
   {
