--- a/other_datasets/vistext_test.ipynb
+++ b/other_datasets/vistext_test.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ea00b3b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/vistext/data/'"
+    "data_dir = '~/Downloads/tmp/JCDL2025/other_datasets/vistext/data/'"
    ]
   },
   {
@@ -864,20 +864,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b5bfb0f3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/vistext/data/README.md\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!ls /Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/vistext/data/README.md"
+    "!ls ~/Downloads/tmp/JCDL2025/other_datasets/vistext/data/README.md"
    ]
   },
   {
