--- a/other_datasets/chart2text_test.ipynb
+++ b/other_datasets/chart2text_test.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/Chart2Text/'"
+    "data_dir = '~/Downloads/tmp/JCDL2025/other_datasets/Chart2Text/'"
    ]
   },
   {
