--- a/other_datasets/chartassistant_test.ipynb
+++ b/other_datasets/chartassistant_test.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/ChartAssistant/'"
+    "base_dir = '~/Downloads/tmp/JCDL2025/other_datasets/ChartAssistant/'"
    ]
   },
   {
