--- a/other_datasets/chartinfo_test.ipynb
+++ b/other_datasets/chartinfo_test.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/CHARTINFO_2024_Train/'"
+    "data_dir = '~/Downloads/tmp/JCDL2025/other_datasets/CHARTINFO_2024_Train/'"
    ]
   },
   {
@@ -1403,7 +1403,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/CHARTINFO_2024_Train/annotations_JSON/*PMC1249583___1471-2458-5-97-1_panel_1.jpg*'"
+       "'~/Downloads/tmp/JCDL2025/other_datasets/CHARTINFO_2024_Train/annotations_JSON/*PMC1249583___1471-2458-5-97-1_panel_1.jpg*'"
       ]
      },
      "execution_count": 23,
