--- a/other_datasets/chartllama_test.ipynb
+++ b/other_datasets/chartllama_test.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/ChartLlama/'"
+    "data_dir = '~/Downloads/tmp/JCDL2025/other_datasets/ChartLlama/'"
    ]
   },
   {
