--- a/other_datasets/chartocr_test.ipynb
+++ b/other_datasets/chartocr_test.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/ChartOCR/DeepRuleDataset/'"
+    "data_dir = '~/Downloads/tmp/JCDL2025/other_datasets/ChartOCR/DeepRuleDataset/'"
    ]
   },
   {
@@ -30,7 +30,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/ChartOCR/DeepRuleDataset/bardata/bar/annotations/instancesBar(1031)_train2019.json'"
+       "'~/Downloads/tmp/JCDL2025/other_datasets/ChartOCR/DeepRuleDataset/bardata/bar/annotations/instancesBar(1031)_train2019.json'"
       ]
      },
      "execution_count": 9,
