--- a/other_datasets/opencqa_test.ipynb
+++ b/other_datasets/opencqa_test.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_data = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/OpenCQA/'"
+    "dir_data = '~/Downloads/tmp/JCDL2025/other_datasets/OpenCQA/'"
    ]
   },
   {
