--- a/other_datasets/scicap_test.ipynb
+++ b/other_datasets/scicap_test.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/SciCap/scicap_data/'\n",
+    "data_dir = '~/Downloads/tmp/JCDL2025/other_datasets/SciCap/scicap_data/'\n",
     "\n",
     "train_dir = 'SciCap-Caption-All/train/'\n",
     "\n",
@@ -344,7 +344,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/SciCap/scicap_data/SciCap-*-Subfig-Img/*/*2011.10036v1-Figure5-1*'"
+       "'~/Downloads/tmp/JCDL2025/other_datasets/SciCap/scicap_data/SciCap-*-Subfig-Img/*/*2011.10036v1-Figure5-1*'"
       ]
      },
      "execution_count": 17,
@@ -365,7 +365,7 @@
     {
      "data": {
       "text/plain": [
-       "['/Users/jnaiman/Downloads/tmp/JCDL2025/other_datasets/SciCap/scicap_data/SciCap-Yes-Subfig-Img/train/2011.10036v1-Figure5-1.png']"
+       "['~/Downloads/tmp/JCDL2025/other_datasets/SciCap/scicap_data/SciCap-Yes-Subfig-Img/train/2011.10036v1-Figure5-1.png']"
       ]
      },
      "execution_count": 18,
